--- a/index.html
+++ b/index.html
@@ -4,44 +4,23 @@
   </head>
   <body bgcolor=white>
 
-    Ejemplos en WEBGL
-	<br>
-	Viewers
-	<br>
+    Trabajos Practicos 1C 2016
     <ul>
-		<li><a href="meshViewer.htm">Mesh Viewer</a></li>
-		<li><a href="sceneViewer.htm">Scene Viewer</a></li>
-		<li><a href="skmeshViewer.htm">Skeletalmesh Viewer</a></li>
-		<li><a href="SkyBoxViewer.htm">SkyBox Viewer</a></li>
-		<li><a href="SkyDomeViewer.htm">Skydome Viewer</a></li>
-    </ul>
+		<li>
+			<img src="entregas2016/gonzales/titulo.png" height="42" >
+			<a href="entregas2016/gonzales/tp.htm">
+			Slam dunk - Gonzalez Stauber, Juan Jose</a>
+		</li>
+		<li>
+			<img src="entregas2016/gustavo/World Runner/Images/Menu.png" height="42" >
+			<a href="entregas2016/gustavo/World Runner/WorldRunner.htm">World Runner - Gustavo Gonzalez</a>
+		</li>
+		<li>
+			<img src="entregas2016/larrete/Titulo.png" height="42" >
+			<a href="entregas2016/larrete/TPFinal.html">Bunjeee - Mariano Larrete</a>
+		</li>
 		
-
-	Escenarios grandes
-	<br>
-    <ul>
-		<li><a href="4toPiso.htm">4to piso</a></li>
-		<li><a href="Quake.htm">Quake</a></li>
     </ul>
-		
-	Ejemplos completos
-	<br>
-    <ul>
-		<li><a href="sceneTest.htm">sceneTest</a></li>
-		<li><a href="sceneTest2.htm">sceneTest2</a></li>
-		<li><a href="sceneTest3.htm">sceneTest3</a></li>
-    </ul>
-	
-    Taller de Algebra y videojuegos
-	<br>
-	Viewers
-	<br>
-    <ul>
-		<li><a href="retrovia/JSEngineTest.html">Engine Test</a></li>
-		<li><a href="retrovia/angrybirds/AngryBirds.html">Angry Birds</a></li>
-		<li><a href="retrovia/arkanoid/arkanoid.html">Akanoid</a></li>
-    </ul>
-	
 
   </body>
 </html>
