--- a/entregas2016/gustavo/World Runner/WorldRunner.htm
+++ b/entregas2016/gustavo/World Runner/WorldRunner.htm
@@ -67,7 +67,7 @@
     var idCar = 9899;
 	var idWheel = 9897;
     var imgWheel = document.createElement("IMG");
-    imgWheel.src = "Images/wheel.png";
+    imgWheel.src = "Images/Wheel.png";
     var imgCar = document.createElement("IMG");
     imgCar.src = "Images/Car.png";
 
@@ -117,7 +117,7 @@
 	var imgMine = document.createElement("IMG");
 	imgMine.src = "Images/Landmine.png";
 	var imgExp = document.createElement("IMG");
-	imgExp.src = "Gif/Explosion";
+	imgExp.src = "Gif/Explosion/0.gif";
 
 	//Flag
 	var imgFlag = document.createElement("IMG");
