--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
 		<li>
 			<img src="entregas2016/gonzales/titulo.png" height="42" >
-			<a href="entregas2016/gonzales/tp.htm">
+			<a href="entregas2016/gonzales/tp.html">
 			Slam dunk - Gonzalez Stauber, Juan Jose</a>
 		</li>
 		<li>
