--- a/apuntes.html
+++ b/apuntes.html
@@ -17,14 +17,31 @@
 </ul>
     </nav>
 	<div class="container">
-
-  		<div class="blurb">
-			<h1>Modelos y Simulacion II para Videojuegos UADE</h1>
-			<p>Bienvenidos a la pagina de la materia modelos II
-			</p>
-		</div> 
-
-</div>
+	<div class="blurb">
+			<h1>Apuntes</h1>
+	
+    <ul>
+		<li>
+			<a href="apuntes/1-cinematica.pdf">1-Cinematica</a>
+		</li>
+		<li>
+			<a href="apuntes/2-dinamica.pdf">2-Dinamica</a>
+		</li>
+		<li>
+			<a href="apuntes/3-rigidbody.pdf">3-Cuerpo Rigido</a>
+		</li>
+		<li>
+			<a href="apuntes/4-realtime.pdf">4-Simulaciones en tiempo real</a>
+		</li>
+		<li>
+			<a href="apuntes/5-engine.pdf">5-Motores de Fisica para Videojuegos</a>
+		</li>
+		<li>
+			<a href="apuntes/anexo_programacion.pdf">Anexo de Programacion en JavaScript</a>
+		</li>
+    </ul>
+</div> 
+	
   
   <footer>
    <ul>
